--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -204,7 +204,12 @@
                         {
                             <div class="col-md-12">
                                 <a href="@Url.Content(string.Format("~/uploads/{0}", att.filepath))" target="_blank"><span class="fa fa-@(att.icon)"></span> @att.filename (@att.size)</a>
-                                &nbsp;<a href="@Url.Action("DeleteAttachment",new { id = att.attachment_id, taskid = Model.task_id})" onclick="return confirm('Are you sure?')"><span class="fa fa-trash"></span></a>
+                                &nbsp;
+                                
+                                @if (session.Current.UserId == att.user_id || session.Current.IsAdmin || !is_readonly)
+                                {
+                                    <a href="@Url.Action("DeleteAttachment",new { id = att.attachment_id, taskid = Model.task_id})" onclick="return confirm('Are you sure?')"><span class="fa fa-trash"></span></a>                                    
+                                }
                             </div>
                         }
 
