--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -8,7 +8,7 @@
     var countopen = Model.Where(x => x.status != 9).Count();
     var countme = Model.Where(x => x.assigned_to == session.Current.UserId && x.status != 9).Count();
     var countclosed = Model.Where(x => x.status == 9).Count();
-    var countopenbyme = Model.Where(x => x.created_by == session.Current.UserId && x.status != 9).Count();
+    var countopenbyme = Model.Where(x => x.owner == session.Current.UserId && x.status != 9).Count();
     
     
     
@@ -43,7 +43,7 @@
         <li role="presentation"><a href="#open" aria-controls="settings" role="tab" data-toggle="tab">Open (@countopen)</a></li>
         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Assigned To Me (@countme)</a></li>
         <li role="presentation"><a href="#closed" aria-controls="messages" role="tab" data-toggle="tab">Closed (@countclosed)</a></li>
-        <li role="presentation"><a href="#openbyme" aria-controls="messages" role="tab" data-toggle="tab">Opened By Me (@countopenbyme)</a></li>
+        <li role="presentation"><a href="#openbyme" aria-controls="messages" role="tab" data-toggle="tab">Owned By Me (@countopenbyme)</a></li>
         
     </ul>
 
@@ -305,7 +305,7 @@
                 </thead>
 
                 <tbody>
-                    @foreach (var item in Model.Where(x => x.created_by == session.Current.UserId && x.status != 9))
+                    @foreach (var item in Model.Where(x => x.owner == session.Current.UserId && x.status != 9))
                     {
                         <tr>
                             <td>
