--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -21,7 +21,9 @@ body {
     color:red;
 }
 
-
+.text-light {
+    color:#CCC;
+}
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
