--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -185,7 +185,7 @@
 
                             <td> <span class="@hist.typeIcon" title="@hist.type"></span></td>
                             <td>@Html.Raw(hist.htmlDesc)</td>
-                            <td><small style="color:#ccc"> @hist.type @hist.operation</small></td>
+                            <td><small class="text-light"> @hist.type @hist.operation</small></td>
                         </tr>
                         }
 
@@ -299,6 +299,7 @@
 
                                     @Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
+                                    <span class="text-light"><small>&nbsp;<span class="fa fa-info-circle"></span> Only <b>Owner</b> can close task</small></span>
                                 </div>
                             </div>
 
