--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -109,15 +109,26 @@
                     </div>
                 </div>
 
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.due_date, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
-                        @*data-format="DD-MM-YYYY" data-template="D MMM YYYY" name="date" value="09-01-2013"*@
+                        @Html.EditorFor(model => model.due_date, new { htmlAttributes = new { @class = "form-control datepicker" , @placeholder="dd/mm/yyyy"} })
+                        @Html.ValidationMessageFor(model => model.due_date, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+                @*<div class="form-group">
+                    @Html.LabelFor(model => model.due_date, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
+                        @*data-format="DD-MM-YYYY" data-template="D MMM YYYY" name="date" value="09-01-2013"
                         @Html.EditorFor(model => model.due_date, new { htmlAttributes = new { @class = "form-control combodate",
                                 @data_format ="YYYY-MM-DD" ,@data_template="D MMM YYYY" } })
                         @Html.ValidationMessageFor(model => model.due_date, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            *@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-6">
@@ -139,12 +150,20 @@
     $(document).ready(function () {
         var _minyear = new Date().getFullYear();
         var _max_year = _minyear + 1;
-    $('.combodate').combodate({
-    
-        minYear: _minyear,
-        maxYear: _max_year,
+        $('.datepicker').datepicker({
+            startDate: '0',
+            format: 'dd/mm/yyyy',
+            autoclose: true,
+            clearBtn: true
+
+        })
+
+        $('.combodate').combodate({
+
+            minYear: _minyear,
+            maxYear: _max_year,
+        });
     });
-    })
 
         bkLib.onDomLoaded(function () {
 
