--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -249,7 +249,7 @@
                         @foreach (var comment in Model.comments.OrderByDescending(x => x.created_on))
                         {
 
-                            <div class="task-title">@(string.IsNullOrWhiteSpace(comment.title) ? "No Title.." : comment.title) - </div>
+                            <div class="task-title"><span style="font-size:.5em; padding:5px;margin-bottom:10px;" class="alert alert-info">C.@comment.comment_id</span> @(string.IsNullOrWhiteSpace(comment.title) ? "No Title.." : comment.title) - </div>
                             <small>@comment.user.fullname on @comment.created_on.Value.ToString("dd MMM yyyy HH:mm")</small>
                             <a href="javascript:void(0);" class="shownextsection toggleshowhide">@(cnt<3?"(hide)":"[more]")</a>
 
@@ -431,15 +431,27 @@
                                 <div class="col-md-8">
                                     @if (is_readonly)
                                     {
-                                        @Html.EditorFor(model => model.due_date, new { htmlAttributes = new { @class = "form-control", @readonly = "" } })
+                                        
+                                        
+                                        if(Model.due_date.HasValue)
+                                        {
+                                        <input type="text" value="@Model.due_date.Value.ToString("dd/MM/yyyy")" readonly="readonly" class="form-control" />
+
+                                        }
+                                        else
+                                        {
+                                            <input type="text" value="" readonly="readonly" class="form-control" />
+                                        }
+
+                                        @Html.HiddenFor(model => model.due_date)
                                     }
                                     else
                                     {
                                     @Html.EditorFor(model => model.due_date, new { htmlAttributes = new { @class = "form-control datepicker", @placeholder = "dd/mm/yyyy" } })
 
                                     }
-
                                     @Html.ValidationMessageFor(model => model.due_date, "", new { @class = "text-danger" })
+
                                 </div>
                             </div>
 
@@ -521,7 +533,8 @@
 
             nicEditors.allTextAreas();
             new nicEditor({
-                  fullPanel: true                
+                  fullPanel: true  
+                  
             });//.panelInstance('area2');
             
         });
