chosen plugin added and last edit includes last comment

--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -60,7 +60,7 @@
                     @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
 
-                        @Html.DropDownList("type", null, new { @class = "form-control", @required="" })
+                        @Html.DropDownList("type", null, new { @class = "form-control chosen-select", @required="" })
                         @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -157,6 +157,8 @@
             clearBtn: true
 
         })
+
+        $('.chosen-select').chosen();
 
         $('.combodate').combodate({
 
